<resources>
    <string name="app_name">nRF Mesh</string>
    <string name="feature_name">Mesh</string>
    <string name="title_scanner">Scanner</string>
    <string name="sub_title_scanning_nodes">Looking for unprovisioned proxy nodes…</string>
    <string name="sub_title_scanning_proxy_node">Looking for provisioned proxy nodes…</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_address">Unknown Address</string>
    <string name="state">On Off State:</string>
    <string name="button_unknown">UNKNOWN</string>
    <string name="ble_permissions_title">BLUETOOTH PERMISSIONS REQUIRED</string>
    <string name="ble_permissions_info">From Android S onwards the application requires Bluetooth Scan and Connect permissions to scan and connect to Bluetooth Low Energy devices.</string>
    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location.
        <b>nRF Mesh Provisioner</b> will not use this information in any way.</string>
    <string name="action_grant_permission">Grant permission</string>
    <string name="action_permission_settings">Settings</string>
    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>
    <string name="unprovisioned_node_guide_title">CAN\'T SEE YOUR NODE?</string>
    <string name="unprovisioned_node_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>relevant</b> firmware and SoftDevice are flashed.</string>
    <string name="unprovisioned_node_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Node is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="unprovisioned_node_guide_location_action">Enable</string>
    <string name="state_connecting">Connecting…</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="beep">Beep</string>
    <string name="blink">Blink</string>
    <string name="vibrate">Vibrate</string>
    <string name="output_numeric">Output Numeric</string>
    <string name="output_alphanumeric">Output Alphanumeric</string>
    <string name="push">Push</string>
    <string name="input_numeric">Input Number</string>
    <string name="input_alphanumeric">Input Alphanumeric</string>
    <string name="title_select_output_oob">Select an Output OOB Action</string>
    <string name="title_select_input_oob">Select an Input OOB Action</string>
    <string name="hint_static_oob">e.g. 00112233445566778899001122334455</string>
    <string name="hint_numeric_action">e.g. 5</string>
    <string name="hint_numeric">e.g. 019655</string>
    <string name="hint_alpha_numeric">e.g. 123ABC</string>
    <string name="error_empty_pin">Error, authentication value cannot be empty!</string>
    <string name="error_invalid_static_oob">Error, static oob value must be 128 bits!</string>
    <string name="title_select_oob">Select OOB Type</string>
    <string name="public_key_information_available">Public Key information available</string>
    <string name="public_key_information_unavailable">Public Key information unavailable</string>
    <string name="static_oob_information_available">Static OOB information available</string>
    <string name="static_oob_information_unavailable">Static OOB information unavailable</string>
    <string name="output_oob_actions_unavailable">Output OOB actions unavailable</string>
    <string name="input_oob_actions_unavailable">Input OOB actions unavailable</string>
    <string name="sending_prov_invite">Sending provisioning invite…</string>
    <string name="provision_action">Provision</string>
    <string name="identify_action">Identify</string>
    <string name="ok">OK</string>
    <string name="title_node_details">Node Details</string>
    <string name="node_name">Name</string>
    <string name="node_prov_timestamp">Provisioned Time</string>
    <string name="node_identifier">Node Identifier</string>
    <string name="node_unicast_address">Unicast Address</string>
    <string name="node_company_identifier">Company Identifier</string>
    <string name="node_product_identifier">Product Identifier</string>
    <string name="node_product_version">Product Version</string>
    <string name="node_replay_protection_count">Replay Protection Count</string>
    <string name="node_features">Node Features</string>
    <string name="title_elements">Elements</string>
    <string name="title_node_element_details">Element Details</string>
    <string name="generate_new_key">Generate Key</string>
    <string name="title_network_name">Network Name</string>
    <string name="summary_network_name">Enter a network name</string>
    <string name="hint_global_network_name">Network Name</string>
    <string name="title_allocated_ranges">Allocated Ranges</string>
    <string name="not_allocated">Not Allocated</string>
    <string name="allocated_to_this">Allocated to this Provisioner</string>
    <string name="allocated_to_another">Allocated to another Provisioner</string>
    <string name="conflicting_with_another">Conflicting with another Provisioner</string>
    <string name="title_range">Range</string>
    <string name="range_deleted">Range deleted.</string>
    <string name="title_no_ranges">NO RANGES ALLOCATED</string>
    <string name="title_edit_unicast_ranges">Edit Unicast Ranges</string>
    <string name="title_edit_group_ranges">Edit Group Ranges</string>
    <string name="title_edit_scene_ranges">Edit Scene Ranges</string>
    <string name="unicast_range_summary">Enter lower and upper bounds as 4–character hexadecimal string.\nValid range: 0x0001 – 0x7FFF</string>
    <string name="group_range_summary">Enter lower and upper bounds as 4–character hexadecimal string.\nValid range: 0xC000 – 0xFEFF</string>
    <string name="scene_range_summary">Enter lower and upper bounds as 4–character hexadecimal string.\nValid range: 0x0001 – 0xFFFF</string>
    <string name="title_provisioners">Provisioners</string>
    <string name="title_provisioner">Provisioner</string>
    <string name="provisioner_deleted">Provisioner deleted.</string>
    <string name="title_provisioner_address">Provisioner Address</string>
    <string name="action_add_range">Add range</string>
    <string name="range_adapter_format"> %s - %s</string>
    <string name="low_address">Low Address</string>
    <string name="high_address">High Address</string>
    <string name="provisioner_name_rationale">This is a friendly name that can be used to identify a provisioner.</string>
    <string name="title_provisioner_name">Provisioner Name</string>
    <string name="title_current_provisioner">Current Provisioner</string>
    <string name="title_other_provisioner">Other Provisioners</string>
    <string name="title_manage_provisioners">Manage Provisioners</string>
    <string name="title_add_provisioner">Add Provisioner</string>
    <string name="title_edit_provisioner">Edit Provisioner</string>
    <string name="hint_delete_provisioner">Hint: Swipe to delete a provisioner.</string>
    <string name="provisioner_authentication_title">Authentication</string>
    <string name="provisioner_input_static_oob">Input the 128-bit Static OOB value provided with the device.</string>
    <string name="provisioner_input_blinks">Input the number of times the device blinked.</string>
    <string name="provisioner_input_beeps">Input the number of times the device beeped.</string>
    <string name="provisioner_input_vibrations">Input the number of times the device vibrated.</string>
    <string name="provisioner_input_numeric">Input the code displayed on the device.</string>
    <string name="provisioner_input_numeric_device">Key in the following code %s on the device.</string>
    <string name="dialog_summary_src">Hexadecimal value in range 0x0001 – 0x7FFF.</string>
    <string name="network_settings">Network Settings</string>
    <string name="title_net_keys">Network Keys</string>
    <string name="unicast_address">Unicast Address: %s</string>
    <string name="unicast_address_unassigned">Unicast Address: Unassigned</string>
    <string name="title_node_name">Node name</string>
    <string name="summary_name">Name</string>
    <string name="node_name_rationale">This is a friendly name to be used to identify a node.</string>
    <string name="title_element_name">Element name</string>
    <string name="element_name_rationale">This is a friendly name to be used to identify an element.</string>
    <string name="hint_friendly_name">Friendly name</string>
    <string name="title_primary_net_key">Primary Network Key</string>
    <string name="title_sub_net_keys">Sub Network Keys</string>
    <string name="hint_network_key">Network key</string>
    <string name="generate_network_key">Generate Key</string>
    <string name="error_empty_network_key">Network key cannot be empty!</string>
    <string name="title_key_index">Key Index</string>
    <string name="error_empty_key_index">Key index cannot be empty!</string>
    <string name="error_invalid_key_index">Key index must be 0 to 4095!</string>
    <string name="error_empty_iv_index">IV Index cannot be empty!</string>
    <string name="error_invalid_iv_index">IV Index must be 0 to 4294967295!</string>
    <string name="title_unicast_address">Unicast Address</string>
    <string name="dialog_summary_unicast_address">Enter a unicast address for the node.</string>
    <string name="title_unicast_addresses">Unicast Addresses</string>
    <string name="title_group_addresses">Group Addresses</string>
    <string name="title_scenes">Scenes</string>
    <string name="hint_unicast_address">Unicast address</string>
    <string name="error_empty_unicast_address">Address cannot be empty!</string>
    <string name="network">Network</string>
    <string name="action_groups">Groups</string>
    <string name="action_proxy">Proxy Filter</string>
    <string name="action_settings">Settings</string>
    <string name="no_nodes_provisioned_title">NO NODES PROVISIONED</string>
    <string name="no_nodes_provisioned_rationale">Add a mesh node by scanning and provisioning the device.</string>
    <string name="no_groups_configured_title">NO GROUPS CONFIGURED</string>
    <string name="no_groups_configured_rationale">Create a group to control your devices. All groups listed here can be subscribed to from a model.</string>
    <string name="group_address_summary">Address: %s</string>
    <string name="select_a_group_rationale">Select an existing group</string>
    <string name="no_available_groups">No available groups.</string>
    <string name="create_a_group_rationale">Create a new group to subscribe</string>
    <string name="hint_select_atleast_provisioner">Hint: Select at least one provisioner.</string>
    <string name="hint_net_key_export">Hint: At least one network key must be selected. Only nodes that store selected keys and Application Keys
        bound to them will be exported.</string>
    <string name="export_device_keys">Export Device Keys</string>
    <string name="device_keys">Device Keys</string>
    <string name="hint_device_keys">Hint: Device keys allow nodes to be reconfigured or reset (removed from the network).</string>
    <string name="add">Add</string>
</resources>