<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <Spinner
            android:id="@+id/oob_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/output_oob_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/item_padding_top"
            android:visibility="gone"
            tools:visibility="visible"
            android:paddingStart="@dimen/item_padding_start"
            android:paddingEnd="@dimen/item_padding_end">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding_top"
                android:text="@string/title_select_output_oob"
                android:textColor="?android:textColorPrimary"/>

            <RadioGroup
                android:id="@+id/radio_group_output_oob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding_top"
                android:paddingBottom="@dimen/item_padding_bottom">

                <RadioButton
                    android:id="@+id/radio_blink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blink"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_beep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beep"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_output_numeric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_numeric"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_output_alpha_numeric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_alphanumeric"
                    android:enabled="false"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_oob_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/item_padding_top"
            android:visibility="gone"
            tools:visibility="visible"
            android:paddingStart="@dimen/item_padding_start"
            android:paddingEnd="@dimen/item_padding_end">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding_top"
                android:text="@string/title_select_input_oob"
                android:textColor="?android:textColorPrimary"/>

            <RadioGroup
                android:id="@+id/radio_group_input_oob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding_top"
                android:paddingBottom="@dimen/item_padding_bottom">

                <RadioButton
                    android:id="@+id/radio_push"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_twist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_input_numeric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_numeric"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/radio_input_alpha_numeric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_alphanumeric"
                    android:enabled="false"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>