<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/alert_dialog_padding_left"
    android:paddingEnd="@dimen/alert_dialog_padding_right">

    <RadioButton
        android:id="@+id/radio_select_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/select_a_group_rationale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_groups_configured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/item_padding_top"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/no_available_groups"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_select_group"
        tools:visibility="visible"/>

    <Spinner
        android:id="@+id/groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_padding_top"
        app:layout_constraintStart_toStartOf="@id/radio_select_group"
        app:layout_constraintTop_toBottomOf="@id/radio_select_group"/>

    <RadioButton
        android:id="@+id/radio_create_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_padding_top"
        android:gravity="start|center_vertical"
        android:text="@string/create_a_group_rationale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groups"/>
</androidx.constraintlayout.widget.ConstraintLayout>