<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/provisioners_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:cardElevation="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/provisioners_toolbar"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:logo="@drawable/ic_shield_provisioner"
                app:title="@string/title_provisioners"
                app:titleMarginStart="@dimen/toolbar_title_margin"
                app:titleTextAppearance="@style/Toolbar.TitleText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/provisioners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/provisioners_toolbar"
                tools:itemCount="3"
                tools:listitem="@layout/checkable_row_item" />

            <include
                android:id="@+id/div1"
                layout="@layout/layout_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/provisioners" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/unbind_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/item_padding_end"
                android:text="@string/hint_select_atleast_provisioner"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_add_provisioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div1"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/network_keys_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/network_keys_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:logo="@drawable/ic_folder_key_24dp"
                app:title="@string/title_net_keys"
                app:titleMarginStart="@dimen/toolbar_title_margin"
                app:titleTextAppearance="@style/Toolbar.TitleText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/network_keys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:scrollbars="none"
                tools:itemCount="3"
                tools:listitem="@layout/removable_row_item" />

            <include
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/network_key_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/item_padding_top"
                android:paddingBottom="@dimen/item_padding_bottom"
                android:text="@string/hint_net_key_export"
                android:textColor="?android:textColorSecondary" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/export_device_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/device_keys_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:logo="@drawable/ic_vpn_key_24dp"
                app:title="@string/device_keys"
                app:titleMarginStart="@dimen/toolbar_title_margin"
                app:titleTextAppearance="@style/Toolbar.TitleText" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_export_device_keys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:checked="true"
                android:text="@string/export_device_keys" />

            <include
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hint_device_keys"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/hint_device_keys" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>